--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,66 +7,66 @@ services:
   mongodb:
     image: sreevallik/mongodb:v1
     container_name: mongodb
-  catalogue:
-    image: sreevallik/catalogue:v1
-    container_name: catalogue
-    depends_on:
-    - mongodb
-  redis:
-    image: redis:7.0
-    container_name: redis
-  user:
-    image: sreevallik/user:v1
-    container_name: user
-    depends_on:
-    - redis
-    - mongodb
-  cart:
-    image: sreevallik/cart:v1
-    container_name: cart
-    depends_on:
-    - catalogue
-    - redis
-  mysql:
-    image: sreevallik/mysql:v1
-    container_name: mysql
-  shipping:
-    image: sreevallik/shipping:v1
-    container_name: shipping
-    depends_on:
-    - mysql
-    - cart
-  rabbitmq:
-    image: rabbitmq:3
-    container_name: rabbitmq
-    environment:
-      RABBITMQ_DEFAULT_USER: roboshop
-      RABBITMQ_DEFAULT_PASS: roboshop123
-  payment:
-    image: sreevallik/payment:v1
-    container_name: payment
-    environment:
-      CART_HOST: cart
-      CART_PORT: 8080
-      USER_HOST: user
-      USER_PORT: 8080
-      AMQP_HOST: rabbitmq
-      AMQP_USER: roboshop
-      AMQP_PASS: roboshop123
-    depends_on:
-    - rabbitmq
-    - cart
-    - user
-  frontend:
-    image: sreevallik/frontend:v1
-    container_name: frontend
-    ports:
-    - "80:80"
-    depends_on:
-    - catalogue
-    - user
-    - cart
-    - shipping
-    - payment
+  # catalogue:
+  #   image: sreevallik/catalogue:v1
+  #   container_name: catalogue
+  #   depends_on:
+  #   - mongodb
+  # redis:
+  #   image: redis:7.0
+  #   container_name: redis
+  # user:
+  #   image: sreevallik/user:v1
+  #   container_name: user
+  #   depends_on:
+  #   - redis
+  #   - mongodb
+  # cart:
+  #   image: sreevallik/cart:v1
+  #   container_name: cart
+  #   depends_on:
+  #   - catalogue
+  #   - redis
+  # mysql:
+  #   image: sreevallik/mysql:v1
+  #   container_name: mysql
+  # shipping:
+  #   image: sreevallik/shipping:v1
+  #   container_name: shipping
+  #   depends_on:
+  #   - mysql
+  #   - cart
+  # rabbitmq:
+  #   image: rabbitmq:3
+  #   container_name: rabbitmq
+  #   environment:
+  #     RABBITMQ_DEFAULT_USER: roboshop
+  #     RABBITMQ_DEFAULT_PASS: roboshop123
+  # payment:
+  #   image: sreevallik/payment:v1
+  #   container_name: payment
+  #   environment:
+  #     CART_HOST: cart
+  #     CART_PORT: 8080
+  #     USER_HOST: user
+  #     USER_PORT: 8080
+  #     AMQP_HOST: rabbitmq
+  #     AMQP_USER: roboshop
+  #     AMQP_PASS: roboshop123
+  #   depends_on:
+  #   - rabbitmq
+  #   - cart
+  #   - user
+  # frontend:
+  #   image: sreevallik/frontend:v1
+  #   container_name: frontend
+  #   ports:
+  #   - "80:80"
+  #   depends_on:
+  #   - catalogue
+  #   - user
+  #   - cart
+  #   - shipping
+  #   - payment
       
 
