--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,13 +35,13 @@ services:
     container_name: shipping
     depends_on:
     - mysql
-  #   - cart
-  # rabbitmq:
-  #   image: rabbitmq:3
-  #   container_name: rabbitmq
-  #   environment:
-  #     RABBITMQ_DEFAULT_USER: roboshop
-  #     RABBITMQ_DEFAULT_PASS: roboshop123
+    - cart
+  rabbitmq:
+    image: rabbitmq:3
+    container_name: rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: roboshop
+      RABBITMQ_DEFAULT_PASS: roboshop123
   # payment:
   #   image: sreevallik/payment:v1
   #   container_name: payment
