--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -57,16 +57,16 @@ services:
     - rabbitmq
     - cart
     - user
-  # frontend:
-  #   image: sreevallik/frontend:v1
-  #   container_name: frontend
-  #   ports:
-  #   - "80:80"
-  #   depends_on:
-  #   - catalogue
-  #   - user
-  #   - cart
-  #   - shipping
-  #   - payment
+  frontend:
+    image: sreevallik/frontend:v1
+    container_name: frontend
+    ports:
+    - "80:80"
+    depends_on:
+    - catalogue
+    - user
+    - cart
+    - shipping
+    - payment
       
 
