--- a/cart/Dockerfile
+++ b/cart/Dockerfile
@@ -8,4 +8,5 @@ ENV REDIS_HOST="redis" \
     CATALOGUE_PORT="8080"
 RUN useradd roboshop && \
     chown -R roboshop:roboshop /opt/server
-USER  roboshopCMD ["node","server.js"]
+# USER  roboshop 
+CMD ["node","server.js"]
