--- a/catalogue/Dockerfile
+++ b/catalogue/Dockerfile
@@ -7,5 +7,5 @@ ENV MONGO="true" \
     MONGO_URL="mongodb://mongodb:27017/catalogue"
 RUN useradd roboshop && \
     chown -R roboshop:roboshop /opt/server
-USER  roboshop
+# USER  roboshop
 CMD ["node","server.js"]
